crates/tests/fixtures/compile_errors/invalid_contract_field.fe
contract Foo:
  val: u256

  pub def foo():
    self.bar